<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">Quantity</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="price">order summary</string>
    <string name="order">Order</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate_cream">Chocolate Cream</string>
    <string name="name_description">Name Description</string>
    <string name="thank_you" >Thank You!!!</string>
</resources>
