<?xml version="1.0" encoding="utf-8"?>
<ScrollView   xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.dev.justcalculator.Home">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name_description_view"
            android:hint="@string/name_description"
            android:inputType=""
            android:layout_marginBottom="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toppings"
            android:textAllCaps="true"
            android:layout_marginBottom="16sp"
            />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/whippedcream_checkbox"
            android:text="@string/whipped_cream"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16sp"
            android:textSize="16sp"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chocolatecream_checkbox"
            android:text="@string/chocolate_cream"
            android:textAllCaps="false"
            android:textAppearance="?android:textAppearanceMedium"
            android:paddingLeft="24dp"
            android:layout_marginBottom="16sp"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:layout_marginBottom="16sp"/>

        <!-- Linear layout for the buttons-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/minus"
                android:onClick="decrement"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/quantity_text_view"
                android:text="@string/zero"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:text="@string/plus"
                android:onClick="increment"
                />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAllCaps="true"
            android:layout_marginBottom="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_summary_text_view"
            android:text="@string/zero"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:text="@string/order"
            android:layout_marginTop="16sp"
            android:onClick="submitOrder"/>

    </LinearLayout>



</ScrollView>

